--- a/package.json
+++ b/package.json
@@ -1,38 +1,29 @@
 {
-  "name": "codespaces-react",
-  "version": "0.1.0",
-  "private": true,
+  "name": "ukkms-fun-and-game-puzzle",
+  "version": "1.0.0",
+  "description": "",
+  "keywords": [],
+  "main": "src/index.js",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1",
-    "web-vitals": "^3.1.0"
+    "party-js": "2.1.3",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-jigsaw-puzzle": "1.0.4",
+    "react-scripts": "5.0.1",
+    "react-router-dom": "^4.4.0-beta.6",
+    "styled-components": "^4.1.1",
+    "ramda": "0.26.1",
+    "rc-switch": "4.1.0"
+  },
+  "devDependencies": {
+    "@babel/runtime": "7.13.8",
+    "typescript": "5.1.3"
   },
   "scripts": {
-    "start": "BROWSER=none WDS_SOCKET_PORT=0 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
 }
