update package.json files

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ukkms-fun-and-game-puzzle",
+  "name": "puzzles-game",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
