--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "axios": "^1.4.0",
     "party-js": "2.1.3",
+    "ramda": "0.26.1",
+    "rc-switch": "4.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-jigsaw-puzzle": "1.0.4",
-    "react-scripts": "5.0.1",
     "react-router-dom": "^4.4.0-beta.6",
-    "styled-components": "^4.1.1",
-    "ramda": "0.26.1",
-    "rc-switch": "4.1.0"
+    "react-scripts": "5.0.1",
+    "styled-components": "^4.1.1"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
@@ -25,5 +26,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
